--- a/charts/bars/index.html
+++ b/charts/bars/index.html
@@ -10,6 +10,7 @@
     <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="js/bars.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div class="container">
